# lk-demo-experiment

./: .editorconfig  .gitattributes  .gitignore  Dvcfile  KerasMF.ipynb  README.md  batch-job.sh  convert-dataset.py  dvc.yaml  dvcSetup.txt  environment.yml  eval-metrics.ml-100k.json  eval-metrics.ml-10m.json  eval-metrics.ml-1m.json  eval-metrics.ml-20m.json  eval-metrics.ml-25m.json  eval-metrics.ml-32m.json  eval-metrics.ml-latest-small.json  eval-metrics.ml100k.json  eval-metrics.ml10m.json  eval-metrics.ml1m.json  eval-metrics.ml20m.json  eval-metrics.ml25m.json  eval-metrics.ml32m.json  eval-metrics.mlsmall.json  eval-output.ipynb  eval-report.ipynb  eval-report.md  eval-report.ml-100k.ipynb  eval-report.ml-10m.ipynb  eval-report.ml-1m.ipynb  eval-report.ml-20m.ipynb  eval-report.ml-25m.ipynb  eval-report.ml-32m.ipynb  eval-report.ml-latest-small.ipynb  eval-report.ml100k.ipynb  eval-report.ml100k.ipynb.dvc  eval-report.ml10m.ipynb  eval-report.ml10m.ipynb.dvc  eval-report.ml1m.ipynb  (+17 more)
.dvc/: .gitignore  config
data/: .gitignore  BX-CSV-Dump.zip.dvc  bx.dvc  dvc.yaml  ml-100k.dvc  ml-100k.zip.dvc  ml-10M100K.dvc  ml-10m.zip.dvc  ml-1m.dvc  ml-1m.zip.dvc  ml-20m.dvc  ml-20m.zip.dvc  ml-25m.zip.dvc  ml-32m.zip.dvc  ml-latest-small.dvc  ml-latest-small.zip.dvc
data-split/: .gitignore  dvc.yaml  ml100k.dvc  ml10m.dvc  ml20m.dvc  mlsmall.dvc
lkdemo/: algorithms.py  datasets.py  log.py  mf_variants.py  models.py
models/: .gitignore  bx-II.dvc  ml20m-II.dvc  ml20m-UU.dvc  mlsmall-II.dvc
output/: .gitignore  ml100k-ALS.dvc  ml100k-BPR.dvc  ml100k-Bias.dvc  (+11 more)
(+48 files in other folders)
