[project]
name = "lk-demo-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas ~=2.0",
    "torch ~=2.2",
    "docopt-ng >=0.9",
    "dvc[s3,webdav,azure] ~=3.50",
    "notebook ~=7.2",
    "papermill ~=2.6",
    "jupytext ~=1.16",
    "seaborn ~=0.13.0",
    "humanize ~=4.0",
    "statsmodels ~=0.14.0",
    "lenskit ~=2025.1",
]

[dependency-groups]
dev = [
    "ruff >=0.8",
    "parquet-tools >=0.2",
    "line-profiler>=4.2.0",
]

# [tool.uv.sources]
# torch = { index = "pytorch", marker = "platform_system != 'Darwin'" }

# [[tool.uv.index]]
# name = "pytorch"
# url = "https://download.pytorch.org/whl/cpu"
# explicit = true
